# brc20-oracle-solana

./: Cargo.toml  README.md
contracts/brc20-oracle/: Cargo.toml
contracts/brc20-oracle/src/: error.rs  lib.rs  test.rs  types.rs
src/: error.rs  lib.rs  test.rs  types.rs
utils/: Cargo.toml
utils/src/: call_process.rs  instruction.rs  lib.rs
