[package]
name = "brc20-oracle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program = "1.17.14"
thiserror = "1.0"
num-derive = "0.4.0"
num-traits = "0.2.16"

[dev-dependencies]
ed25519-dalek = "1.0.1"
solana-sdk = "1.17.14"
solana-program-test = "1.17.14"

[features]
no-entrypoint = []
