[workspace.package]
authors = ["BoolNetwork"]
edition = "2021"
version = "0.1.0"

[workspace]
resolver = "2"

members = [
    "./contracts/brc20-oracle",
    "./utils",
]

[workspace.dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-client = "1.17.16"
solana-program = "1.17.16"
thiserror = "1.0"
num-derive = "0.4.0"
num-traits = "0.2.16"

brc20-oracle = { path = "./contracts/brc20-oracle" }

# dev dependencies
hex = "0.4.3"
ed25519-dalek = "1.0.1"
solana-sdk = "1.17.16"
solana-program-test = "1.17.16"
