[package]
name = "brc20-oracle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
solana-program.workspace = true
thiserror.workspace = true
num-derive.workspace = true
num-traits.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
solana-sdk.workspace = true
solana-program-test.workspace = true

[features]
no-entrypoint = []
